variant type error solved

--- a/portfolio-config.json
+++ b/portfolio-config.json
@@ -111,7 +111,7 @@
     "cloud_devops": ["AWS","Azure","Docker","Kubernetes","Git","CI/CD","GitHub Actions"],
     "scripting_tools": ["Bash", "Unix/Linux command line", "Shell scripting", "File system management", "Process control"],
     "iot_embedded": ["Microcontroller Architectures","Real-Time Operating Systems (RTOS)", "Communication protocols", "Electronics & circuit basics"],
-    "soft_skills": ["Problem Solving", "Team Leadership", "Project Management", "Communication", "Learning Agility", "Innovation"]
+    "soft_skills": ["Teamwork", "Problem solving", "Fast Learning", "Intellectual curiosity", "Effective communication"]
   },
   "projects": [
 
